--- a/java.html
+++ b/java.html
@@ -486,7 +486,7 @@
     <div class="particles" id="particles"></div>
     
     <div class="header">
-        <div class="logo">HIDDEN POINT</div>
+        <div class="logo">JAVA</div>
         <div>
             <button class="nav-button active" onclick="showSection('programa')">PROGRAMAS</button>
             <button class="nav-button" onclick="showSection('clases')">CLASES</button>
@@ -495,7 +495,6 @@
             <button class="nav-button" onclick="showSection('libros')">LIBROS</button>
             <button class="nav-button" onclick="showSection('links')">LINKS</button>
         </div>
-        <div class="tech-tag">JAVA</div>
     </div>
 
     <!-- SECCIÓN PROGRAMA -->
