--- a/java.html
+++ b/java.html
@@ -488,7 +488,7 @@
     <div class="header">
         <div class="logo">JAVA</div>
         <div>
-            <button class="nav-button active" onclick="showSection('programa')">PROGRAMAS</button>
+            <button class="nav-button active" onclick="showSection('programa')">INTRO</button>
             <button class="nav-button" onclick="showSection('clases')">CLASES</button>
             <button class="nav-button" onclick="showSection('teoria')">TEORÍA</button>
             <button class="nav-button" onclick="showSection('practica')">PRÁCTICA</button>
@@ -504,21 +504,8 @@
                 <div class="menu-container">
                     <button class="menu-button" onclick="toggleSubmenu('programa-fundamentos')">Fundamentos Java</button>
                     <div id="programa-fundamentos" class="submenu">
-                        <div class="submenu-item" data-type="pdf" onclick="loadFile('1-tZuaQIjVZWYhu3viYNkpQkeSj9CqvFL', this)">
-                            Introducción a Java<span class="file-type">PDF</span>
-                        </div>
-                        <div class="submenu-item" data-type="pdf" onclick="loadFile('19zNvkwK0NVgmclU3dEU-EBaFf8IHLUzn', this)">
-                            Sintaxis Básica<span class="file-type">PDF</span>
-                        </div>
-                    </div>
-
-                    <button class="menu-button" onclick="toggleSubmenu('programa-avanzado')">Java Avanzado</button>
-                    <div id="programa-avanzado" class="submenu">
-                        <div class="submenu-item" data-type="pdf" onclick="loadFile('199wodnyypeV6LwyTtytkpv8Q5f17o24C', this)">
-                            Programación Orientada a Objetos<span class="file-type">PDF</span>
-                        </div>
-                        <div class="submenu-item" data-type="pdf" onclick="loadFile('1GglUyDBkNICZ5v0lAcX57S6jpfagF17Q', this)">
-                            Colecciones y Genéricos<span class="file-type">PDF</span>
+                        <div class="submenu-item" data-type="pdf" onclick="loadFile('1D_sB2-YGOML5fKVpN4IsdAgRY4UxbgTr', this)">
+                            Guía rápida fundamentos en JAVA<span class="file-type">PDF</span>
                         </div>
                     </div>
                 </div>
