--- a/java.html
+++ b/java.html
@@ -532,17 +532,17 @@
                 <div class="menu-container">
                     <button class="menu-button" onclick="toggleSubmenu('clases-basico')">Introducción</button>
                     <div id="clases-basico" class="submenu">
-                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=c1ojTQDitEKugD5Z', this)">1-Introducción</div>
-                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=lPaBD1Urcc-5lb-r', this)">2- Contexto</div>
-                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=osuW_FLaIYwd9aLP', this)">3-Historia</div>
-                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=9phI0Y8Eox34LB_W', this)">4-Máquina Virtual Java (JVM)</div>
-                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=JPkcJCqZWCAbISjH', this)">5-Características del lenguaje</div>
-                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=0nuhnVtrYgdKhqQE', this)">6-Usos del Lenguaje</div>
-                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=A74_JIaES1bOCj65', this)">7-Versiones de Java</div>
-                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=msgGSN85WurOaZaT', this)">8-Instalación</div>
-                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=S2mx0K2-moe-R0x9', this)">9-Editores de código</div>
-                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=5JVE-fVMpDanAU4P', this)">10-IDE IntelliJ Idea</div>
-                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=beqYbDXz0JhTc1DP', this)">11-Documentación oficial</div>
+                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=cIUHDUoHPXbeSqOp&amp;start=309', this)">1-Introducción</div>
+                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=QncPjiG3-OsgLxoY&amp;start=423', this)">2- Contexto</div>
+                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=FypY3EhbsfAHthxG&amp;start=827', this)">3-Historia</div>
+                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=a8IJqr0kNU6GMjlI&amp;start=1143', this)">4-Máquina Virtual Java (JVM)</div>
+                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=aRVt8NJK1IeYOM-l&amp;start=1326', this)">5-Características del lenguaje</div>
+                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=nXqR36HtFG7yeGMG&amp;start=1622', this)">6-Usos del Lenguaje</div>
+                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=gp0wj3ClTXgqLOD-&amp;start=1964', this)">7-Versiones de Java</div>
+                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=NB8PkIlHCMzmIqes&amp;start=2563', this)">8-Instalación</div>
+                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=uv3uRoiFbUk91jcv&amp;start=3064', this)">9-Editores de código</div>
+                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=Lq1c_S5krYN9_skb&amp;start=3582', this)">10-IDE IntelliJ Idea</div>
+                        <div class="submenu-item" onclick="loadVideo('JOAqpdM36wI?si=gtE5WvWyLYNVSCZU&amp;start=3893', this)">11-Documentación oficial</div>
                     </div>
                   
                     <button class="menu-button" onclick="toggleSubmenu('clases-primerospasos')">Primeros Pasos</button>
