--- a/java.html
+++ b/java.html
@@ -21,13 +21,20 @@
             box-sizing: border-box;
         }
 
+        html, body {
+            height: 100%;
+            overflow: hidden;
+        }
+
         body {
             font-family: 'Exo', sans-serif;
             background: var(--dark-bg);
             color: white;
-            min-height: 100vh;
             overflow-x: hidden;
             position: relative;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
         }
 
         /* Efecto de fondo futurista */
@@ -72,6 +79,7 @@
             align-items: center;
             padding: 1.5rem 2rem;
             border-bottom: 1px solid rgba(255, 0, 128, 0.3);
+            flex-shrink: 0;
         }
 
         .logo {
@@ -147,19 +155,24 @@
 
         .section-container {
             display: none;
+            flex: 1;
+            overflow: hidden;
         }
 
         .section-container.active {
-            display: block;
+            display: flex;
+            flex-direction: column;
         }
 
         .main-container {
             max-width: 1400px;
-            margin: 20px auto;
+            margin: 0 auto;
             padding: 1.5rem;
             display: flex;
             gap: 20px;
-            min-height: 70vh;
+            flex: 1;
+            width: 100%;
+            overflow: hidden;
         }
 
         .menu-lateral {
@@ -172,6 +185,8 @@
             border-radius: 15px;
             background: var(--card-bg);
             backdrop-filter: blur(5px);
+            overflow-y: auto; /* Barra de scroll vertical */
+            height: 100%;
         }
 
         .menu-button {
@@ -217,12 +232,14 @@
             flex-direction: column;
             background: var(--card-bg);
             backdrop-filter: blur(5px);
+            min-height: 0; /* Necesario para el flex */
         }
 
         .video-header, .pdf-header {
             padding: 1.2rem;
             border-bottom: 1px solid rgba(255, 0, 128, 0.3);
             position: relative;
+            flex-shrink: 0;
         }
 
         .section-title {
@@ -246,6 +263,7 @@
             padding: 15px;
             display: flex;
             align-items: center;
+            min-height: 0; /* Necesario para el flex */
         }
 
         .video-wrapper {
@@ -278,6 +296,7 @@
             overflow: auto;
             position: relative;
             background: rgba(0, 0, 0, 0.5);
+            min-height: 0; /* Necesario para el flex */
         }
 
         .pdf-wrapper {
@@ -461,6 +480,7 @@
             .main-container {
                 flex-direction: column;
                 padding: 1rem;
+                height: auto;
             }
             
             .menu-lateral {
