--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         :root {
-            --neon-pink: #ff00a0;
+            --neon-pink: #ff00ff;
             --neon-purple: #c724ff;
             --dark-bg: #0a0a10;
             --card-bg: rgba(20, 15, 30, 0.7);
