--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         :root {
-            --neon-pink: #ff00ff;
+            --neon-pink: #ff00a0;
             --neon-purple: #c724ff;
             --dark-bg: #0a0a10;
             --card-bg: rgba(20, 15, 30, 0.7);
@@ -550,4 +550,5 @@
                 const hue = Math.floor(Math.random() * 20) + 320;
                 particle.style.background = `hsla(${hue}, 100%, 60%, ${opacity})`;
                 particle.style.boxShadow = `0 0 10px hsla(${hue}, 100%, 60%, 0.8)`;
+
 
