--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
         .category-card h2 {
             font-family: 'Orbitron', sans-serif;
-            font-size: 2rem;
+            font-size: 1.5rem; /* Reduced from 2rem to 1.5rem */
             margin-bottom: 1rem;
             color: #fff;
             text-transform: uppercase;
@@ -447,7 +447,7 @@
             }
             
             .category-card h2 {
-                font-size: 1.8rem; /* Tamaño de título reducido */
+                font-size: 1.3rem; /* Reduced from 1.8rem to 1.3rem for mobile */
             }
         }
     </style>
@@ -550,6 +550,14 @@
                 const hue = Math.floor(Math.random() * 20) + 320;
                 particle.style.background = `hsla(${hue}, 100%, 60%, ${opacity})`;
                 particle.style.boxShadow = `0 0 10px hsla(${hue}, 100%, 60%, 0.8)`;
+
+                particlesContainer.appendChild(particle);
+            }
+        });
+    </script>
+</body>
+</html>
+
 
 
 
