--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         }
 
         :root {
-            --neon-pink: #ff00a0;
-            --neon-purple: #c724ff;
-            --dark-bg: #0a0a10;
-            --card-bg: rgba(20, 15, 30, 0.7);
-            --grid-color: rgba(255, 0, 128, 0.1);
+            --neon-pink: #ff00ff;
+            --neon-purple: #8a2be2;
+            --primary-color: #e6e6fa;
+            --dark-bg: #1a1a2e;
+            --card-bg: rgba(30, 30, 50, 0.7);
+            --grid-color: rgba(255, 0, 255, 0.1);
         }
 
         body {
@@ -41,9 +42,9 @@
             width: 100%;
             height: 100%;
             background: 
-                radial-gradient(circle at 10% 20%, rgba(255, 0, 128, 0.05) 0%, transparent 20%),
-                radial-gradient(circle at 90% 80%, rgba(255, 0, 128, 0.05) 0%, transparent 20%),
-                radial-gradient(circle at 30% 60%, rgba(255, 0, 128, 0.05) 0%, transparent 20%);
+                radial-gradient(circle at 10% 20%, rgba(255, 0, 255, 0.05) 0%, transparent 20%),
+                radial-gradient(circle at 90% 80%, rgba(255, 0, 255, 0.05) 0%, transparent 20%),
+                radial-gradient(circle at 30% 60%, rgba(255, 0, 255, 0.05) 0%, transparent 20%);
             z-index: -1;
         }
 
@@ -82,7 +83,7 @@
             justify-content: space-between;
             align-items: center;
             padding: 1.5rem 0;
-            border-bottom: 1px solid rgba(255, 0, 128, 0.3);
+            border-bottom: 1px solid rgba(255, 0, 255, 0.3);
             margin-bottom: 3rem;
             position: relative;
         }
@@ -92,18 +93,18 @@
             font-size: 3rem;
             font-weight: 800;
             text-transform: uppercase;
-            background: linear-gradient(45deg, #ff00a0, #ff0077, #ff0066);
+            background: linear-gradient(45deg, #ff00ff, #8a2be2, #e6e6fa);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            text-shadow: 0 0 15px rgba(255, 0, 128, 0.5);
+            text-shadow: 0 0 15px rgba(255, 0, 255, 0.5);
             letter-spacing: 3px;
             position: relative;
             animation: neonPulse 3s infinite alternate;
         }
 
         @keyframes neonPulse {
-            0% { text-shadow: 0 0 10px rgba(255, 0, 128, 0.5); }
-            100% { text-shadow: 0 0 25px rgba(255, 0, 128, 0.8), 0 0 50px rgba(255, 0, 128, 0.4); }
+            0% { text-shadow: 0 0 10px rgba(255, 0, 255, 0.5); }
+            100% { text-shadow: 0 0 25px rgba(255, 0, 255, 0.8), 0 0 50px rgba(255, 0, 255, 0.4); }
         }
 
         .logo::after {
@@ -113,7 +114,7 @@
             left: 0;
             width: 100%;
             height: 3px;
-            background: linear-gradient(90deg, transparent, #ff00a0, transparent);
+            background: linear-gradient(90deg, transparent, #ff00ff, transparent);
         }
 
         .tagline {
@@ -140,10 +141,10 @@
             font-size: 4rem;
             margin-bottom: 1.5rem;
             text-transform: uppercase;
-            background: linear-gradient(45deg, #ff00a0, #ff0077, #ff0066);
+            background: linear-gradient(45deg, #ff00ff, #8a2be2, #e6e6fa);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
-            text-shadow: 0 0 20px rgba(255, 0, 128, 0.4);
+            text-shadow: 0 0 20px rgba(255, 0, 255, 0.4);
             animation: pulse 2s infinite;
             letter-spacing: 2px;
             font-weight: 700;
@@ -151,9 +152,9 @@
         }
 
         @keyframes pulse {
-            0% { text-shadow: 0 0 10px rgba(255, 0, 128, 0.4); }
-            50% { text-shadow: 0 0 30px rgba(255, 0, 128, 0.8); }
-            100% { text-shadow: 0 0 10px rgba(255, 0, 128, 0.4); }
+            0% { text-shadow: 0 0 10px rgba(255, 0, 255, 0.4); }
+            50% { text-shadow: 0 0 30px rgba(255, 0, 255, 0.8); }
+            100% { text-shadow: 0 0 10px rgba(255, 0, 255, 0.4); }
         }
 
         .hero p {
@@ -176,7 +177,7 @@
 
         .category-card {
             background: var(--card-bg);
-            border: 1px solid rgba(255, 0, 128, 0.3);
+            border: 1px solid rgba(255, 0, 255, 0.3);
             border-radius: 10px;
             padding: 1.8rem 1.2rem; /* Reducido para dar más espacio */
             text-align: center;
@@ -197,7 +198,7 @@
             left: -2px;
             right: -2px;
             bottom: -2px;
-            background: linear-gradient(45deg, #ff00a0, #ff0077, #ff0066, #ff00a0);
+            background: linear-gradient(45deg, #ff00ff, #8a2be2, #e6e6fa, #ff00ff);
             z-index: -1;
             border-radius: 12px;
             opacity: 0;
@@ -206,20 +207,16 @@
 
         .category-card:hover {
             transform: translateY(-10px) scale(1.03);
-            box-shadow: 0 15px 30px rgba(255, 0, 128, 0.2);
-            border-color: rgba(255, 0, 128, 0.6);
-        }
-
-        .category-card:hover::before {
-            opacity: 0.5;
+            box-shadow: 0 15px 30px rgba(255, 0, 255, 0.2);
+            border-color: rgba(255, 0, 255, 0.6);
         }
 
         .category-card i {
             font-size: 3.5rem;
             margin-bottom: 1.5rem;
-            color: #ff0077;
-            text-shadow: 0 0 15px rgba(255, 0, 128, 0.7);
-            filter: drop-shadow(0 0 5px rgba(255, 0, 128, 0.5));
+            color: #ff00ff;
+            text-shadow: 0 0 15px rgba(255, 0, 255, 0.7);
+            filter: drop-shadow(0 0 5px rgba(255, 0, 255, 0.5));
         }
 
         .category-card h2 {
@@ -252,8 +249,8 @@
             display: inline-block;
             padding: 0.7rem 1.2rem; /* Padding reducido para mejor proporción */
             background: transparent;
-            color: #ff0077;
-            border: 2px solid #ff0077;
+            color: #ff00ff;
+            border: 2px solid #ff00ff;
             border-radius: 30px;
             text-decoration: none;
             font-family: 'Orbitron', sans-serif;
@@ -264,7 +261,7 @@
             transition: all 0.3s ease;
             position: relative;
             overflow: hidden;
-            box-shadow: 0 0 10px rgba(255, 0, 128, 0.2);
+            box-shadow: 0 0 10px rgba(255, 0, 255, 0.2);
             width: auto; /* Ancho automático según contenido */
             min-width: 100px; /* Ancho mínimo reducido */
             text-align: center;
@@ -277,15 +274,15 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(90deg, transparent, rgba(255, 0, 128, 0.3), transparent);
+            background: linear-gradient(90deg, transparent, rgba(255, 0, 255, 0.3), transparent);
             transform: translateX(-100%);
             transition: transform 0.5s ease;
         }
 
         .btn:hover {
-            background: rgba(255, 0, 128, 0.1);
-            box-shadow: 0 0 20px rgba(255, 0, 128, 0.6);
-            color: #ff66b2;
+            background: rgba(255, 0, 255, 0.1);
+            box-shadow: 0 0 20px rgba(255, 0, 255, 0.6);
+            color: #e6e6fa;
         }
 
         .btn:hover::before {
@@ -297,7 +294,7 @@
             margin-top: 5rem;
             text-align: center;
             padding: 2rem;
-            border-top: 1px solid rgba(255, 0, 128, 0.3);
+            border-top: 1px solid rgba(255, 0, 255, 0.3);
             color: rgba(255, 255, 255, 0.6);
             font-size: 0.9rem;
             font-family: 'Exo', sans-serif;
@@ -321,8 +318,8 @@
         .particle {
             position: absolute;
             border-radius: 50%;
-            background: rgba(255, 0, 128, 0.6);
-            box-shadow: 0 0 15px rgba(255, 0, 128, 0.8);
+            background: rgba(255, 0, 255, 0.6);
+            box-shadow: 0 0 15px rgba(255, 0, 255, 0.8);
             animation: float 10s infinite ease-in-out;
         }
 
@@ -359,7 +356,7 @@
             padding: 20px;
             margin: 30px auto;
             max-width: 800px;
-            box-shadow: 0 0 20px rgba(255, 0, 128, 0.3);
+            box-shadow: 0 0 20px rgba(255, 0, 255, 0.3);
         }
         
         .explanation-panel h2 {
@@ -391,8 +388,8 @@
         
         .improvement-tag {
             display: inline-block;
-            background: rgba(255, 0, 128, 0.2);
-            color: #ff66b2;
+            background: rgba(255, 0, 255, 0.2);
+            color: #e6e6fa;
             padding: 2px 8px;
             border-radius: 4px;
             font-size: 0.8rem;
@@ -557,6 +554,7 @@
     </script>
 </body>
 </html>
+
 
 
 
