--- a/index.html
+++ b/index.html
@@ -511,14 +511,14 @@
                 <h2>HTML y CSS</h2>
                 <p>Comenzando</p>
                 <div class="btn-container">
-                    <a href="java.html" class="btn">ACCEDER</a>
+                    <a href="https://todocodeacademy.com/course/html-y-css-desde-cero/" class="btn">ACCEDER</a>
                 </div>
             </div>
             
             <div class="category-card">
                 <i class="fab fa-python"></i>
                 <h2>Python</h2>
-                <p>Aprende el lenguaje más popular para ciencia de datos</p>
+                <p>Comenzando</p>
                 <div class="btn-container">
                     <a href="python.html" class="btn">ACCEDER</a>
                 </div>
